--- a/oow_file_naming.qmd
+++ b/oow_file_naming.qmd
@@ -77,7 +77,7 @@ citation:
   container-title: " IPBES Technical Guidelines: Part 12A - file naming convention"
   doi: 10.5281/zenodo.10004406
 doi: 10.5281/zenodo.10004406
-version: 1.0
+version: 1.1
 
 format:
     html:
@@ -100,8 +100,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 *For any inquires please contact [aidin.niamir\@senckenberg.de](mailto:aidin.niamir@senckenberg.de)* 
 
-Version: 1.0
-Last updated: 16 October 2023
+Version: 1.1
+Last updated: 27 February 2024
 
 DOI: 10.5281/zenodo.10004406
 
@@ -122,23 +122,43 @@ In detail:
 
 IPBES: The acronym IPBES should be always present (in capital letters)
 
-[assessment_abbreviation]: the abbreviation of the assessment as was **approved during the scoping of the assessment**, e.g., IAS for invasive alien species, NEX for the Nexus, TfC for transformative change and BB for business and biodiversity (in capital letters).
+[assessment_abbreviation]: the abbreviation of the assessment as was **approved during the scoping of the assessment**, e.g., IAS for invasive alien species, NXS for the Nexus, TCA for transformative change and BBA for business and biodiversity (in capital letters).
 
 | **Full Name** | **Short Name** | **Abbreviation** |
 | --- | --- | --- |
-| Global assessment report on biodiversity and ecosystem services of the Intergovernmental Science-Policy Platform on Biodiversity and Ecosystem Services | Global assessment | GA |
+| Assessment report on pollinators, pollination and food production | Pollinators assessment | PPA |
+|    |   |   | 
+| Methodological assessment report on scenarios and models of biodiversity and ecosystem services | Scenarios and models assessment | SCM |
+|    |   |   |
+| Regional assessment report on biodiversity and ecosystem services for Africa | Africa assessment | AFA |
+|    |   |   |
+| Regional assessment report on biodiversity and ecosystem services for the Americas | Americas assessment | AMA |
+|    |   |   |
+| Regional assessment report on biodiversity and ecosystem services for Asia and the Pacific | Asia and the Pacific assessment | APA |
+|    |   |   |
+| Regional assessment report on biodiversity and ecosystem services for Europe and Central Asia | Europe and Central Asia assessment | ECA |
+|    |   |   |
+| Assessment of land degradation and restoration | Land degradation assessment | LDR | 
+|    |   |   |
+| Global assessment report on biodiversity and ecosystem services of the Intergovernmental Science-Policy Platform on Biodiversity and Ecosystem Services | Global assessment | GA1 |
 |    |   |   | 
 | Methodological assessment regarding the diverse conceptualization of multiple values of nature and its benefits, including biodiversity and ecosystem functions and services | Values assessment | VA |
 |    |   |   | 
 | Thematic assessment of the sustainable use of wild species | Sustainable use assessment | SUA |
 |    |   |   | 
-| Thematic assessment of the interlinkages among biodiversity, water, food and health | Nexus assessment | NEX |
-|    |   |   | 
 | Thematic assessment of invasive alien species and their control | Invasive alien species assessment | IAS |
 |    |   |   | 
-| Thematic assessment of the underlying causes of biodiversity loss, determinants of transformative change and options for achieving the 2050 vision for biodiversity | Transformative change assessment | TfC |
+| Thematic assessment of the interlinkages among biodiversity, water, food and health | Nexus assessment | NXS |
 |    |   |   | 
-| Methodological Assessment of the Impact and Dependence of Business on Biodiversity and Nature’s Contributions to People | Business and biodiversity assessment | BBA |
+| Thematic assessment of the underlying causes of biodiversity loss, determinants of transformative change and options for achieving the 2050 vision for biodiversity | Transformative change assessment | TCA |
+|    |   |   | 
+| Methodological assessment of the impact and dependence of business on biodiversity and nature’s contributions to people | Business and biodiversity assessment | BBA |
+|    |   |   |
+| Methodological assessment on monitoring biodiversity and nature’s contributions to people | Monitoring assessment | MTA |
+|    |   |   |
+| Second global assessment of biodiversity and ecosystem services | Second global assessment | GA2 |
+|    |   |   |
+| Methodological assessment of integrated biodiversity-inclusive spatial planning and ecological connectivity | Spatial planning assessment | SPC |
 
 
 [chapter]: chapter and subchapter number or “SPM”, e.g. “Ch5.2”. This is an optional field; if there is no chapter, use “__” (i.e. two underscores) to keep the file name machine readable.
