--- a/oow_file_naming.qmd
+++ b/oow_file_naming.qmd
@@ -89,7 +89,10 @@ format:
         code-summary: 'Show the code'
 ---
 
-```{r setup, include=FALSE}
+```{r}
+#| label: setup
+#| include: false
+
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
